--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index"
+    "start": "nodemon src/server",
+    "dev": "nodemon src/server"
   },
   "keywords": [],
   "author": "",
